samples/_failures_safe/1761257909_7f80f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a52d48d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4a52d48d.c:171:33: error: expected ‘;’ at end of input
  171 |         tokens[token_count].type
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_4a52d48d.c:171:9: error: expected declaration or statement at end of input
  171 |         tokens[token_count].type
      |         ^~~~~~
./samples/SAFE/__tmp_4a52d48d.c:171:9: error: expected declaration or statement at end of input
